Blackpurl/src/objects/CO_Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>AccountingIdForJournalEntry__c</fullName>
        <label>AccountingIdForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponseForJournalEntry__c</fullName>
        <label>AccountingResponseForJournalEntry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Payments</relationshipLabel>
        <relationshipName>CO_Invoice_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cash_Drawer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Drawer</label>
        <referenceTo>Cash_Drawer__c</referenceTo>
        <relationshipLabel>CO Invoice Payments</relationshipLabel>
        <relationshipName>CO_Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Rounding_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Rounding Payment</label>
        <referenceTo>CO_Invoice_Payment__c</referenceTo>
        <relationshipLabel>CO Invoice Payments (Cash Rounding Payment)</relationshipLabel>
        <relationshipName>CO_Invoice_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Reverse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reverse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash Rounding</fullName>
                </value>
                <value>
                    <fullName>Charge Account</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Use Deposit</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reverse_Link__c</fullName>
        <label>Reverse Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Payment_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Payment From</label>
        <referenceTo>CO_Invoice_Payment__c</referenceTo>
        <relationshipLabel>CO Invoice Payments</relationshipLabel>
        <relationshipName>CO_Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncTokenForJournalEntry__c</fullName>
        <label>SyncTokenForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBJournalEntrySync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBJournalEntrySync</label>
        <type>Checkbox</type>
    </fields>
    <label>CO Invoice Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_CO_Invoices_Payment_For_JE</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CO_Invoice_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBJournalEntrySync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB CO Invoices Payment For JE</label>
    </listViews>
    <nameField>
        <displayFormat>COIP-{00000000}</displayFormat>
        <label>CO Invoice Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>